--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -37,7 +37,7 @@ jobs:
 
   sonarqube:
     needs: test
-    if: true
+    if: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -61,6 +61,54 @@ jobs:
         with:
           name: sonarqube-report
           path: sonarqube-report.json
+
+  dast:
+    needs: [test, sonarqube]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devlops-labs:dast-test
+
+      - name: Deploy DAST Container App
+        uses: azure/container-apps-deploy-action@v1
+        with:
+          imageToDeploy: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:dast-test
+          containerAppName: devops-test-app
+          containerAppEnvironment: devops-app-env
+          resourceGroup: devsecops-lab
+          location: australiaeast
+          targetPort: 5000
+
+      - name: Get deployed DAST app URL
+        run: |
+          export FQDN=$(az containerapp show \
+                        -n devops-test-app \
+                        -g devsecops-lab \
+                        --query properties.configuration.ingress.fqdn \
+                        -o tsv)
+          echo "TEST_APP_URL=https://$FQDN" >> $GITHUB_ENV
+          echo "TEST_APP_URL=https://$FQDN"
+          curl https://$FQDN/ui
+          sed -i "s, http://localhost:5000,https://$FQDN,g" \
+              $GITHUB_WORKSPACE/openapi_specs/openapi3.yml
+
 
   build:
     needs: test
