--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -63,7 +63,7 @@ jobs:
           path: sonarqube-report.json
 
   dast:
-    needs: [test, sonarqube]
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -111,7 +111,7 @@ jobs:
 
 
   build:
-    needs: test
+    needs: [sonarqube]
     permissions:
       id-token: write
     runs-on: ubuntu-latest
