--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -88,7 +88,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devlops-labs:dast-test
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:dast-test
 
       - name: Deploy DAST Container App
         uses: azure/container-apps-deploy-action@v1
