--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -119,7 +119,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: "ghcr.io/zaproxy/zaproxy:stable"
           format: openapi
-          target: $TEST_APP_URL
+          target: ${{ env.TEST_APP_URL }}
           rules_file_name: .zap/rules.tsv
           cmd_options: "-a -c /zap/wrk/.zap/rules.tsv"
           fail_action: false
