--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -124,7 +124,7 @@ jobs:
           cmd_options: "-a -c /zap/wrk/.zap/rules.tsv"
           fail_action: false
           allow_issue_writing: false
-          artifact_name: zapscan
+          artifact_name: zap-report
 
       - name: Upload ZAP report
         id: artifact-zap
