--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -112,6 +112,7 @@ jobs:
           curl https://$FQDN/ui
           sed -i "s, http://localhost:5000,https://$FQDN,g" \
               $GITHUB_WORKSPACE/openapi_specs/openapi3.yml
+          cat $GITHUB_WORKSPACE/openapi_specs/openapi3.yml
 
       - name: OWASP ZAP Scan
         uses: zaproxy/action-api-scan@v0.6.0
@@ -119,7 +120,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: "ghcr.io/zaproxy/zaproxy:stable"
           format: openapi
-          target: ${{ env.TEST_APP_URL }}
+          target: /zap/wrk/openapi_specs/openapi3.yml
           rules_file_name: .zap/rules.tsv
           cmd_options: "-a -c /zap/wrk/.zap/rules.tsv"
           fail_action: false
