--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -37,7 +37,7 @@ jobs:
 
   sonarqube:
     needs: test
-    if: false
+    if: true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -63,7 +63,7 @@ jobs:
           path: sonarqube-report.json
 
   dast:
-    needs: [test]
+    needs: [test, sonarqube]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -134,7 +134,7 @@ jobs:
           path: report_json.json
 
   build:
-    needs: [sonarqube]
+    needs: [test, sonarqube]
     permissions:
       id-token: write
     runs-on: ubuntu-latest
@@ -173,6 +173,16 @@ jobs:
             ACCESS_TOKEN=$(az account get-access-token | jq -r .accessToken)
             echo "azureAccessToken=$ACCESS_TOKEN" >> "$GITHUB_OUTPUT"
 
+      - uses: actions/download-artifact@v4
+        with:
+          name: sonarqube-report
+          path: ${{ github.workspace }}
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: zap-report
+          path: ${{ github.workspace }}
+
       - name: Upload reports
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -183,3 +193,13 @@ jobs:
                             -d "$DOCKERHUB_USERNAME/devops-labs" \
                             https://devsecops-ver.azurewebsites.net/api/week1-container)
           echo "Week1 container upload: $WEEK1_CONTAINER"
+          SONAR_RESPONSE=$(curl -X POST \
+                          -H "Authorization: Bearer $AZURE_ACCESS_TOKEN" \
+                          --data-binary @$GITHUB_WORKSPACE/sonarqube-report.json \
+                          https://devsecops-ver.azurewebsites.net/api/week3-sonar-report)
+          echo "Sonar upload: $SONAR_RESPONSE"
+          ZAP_RESPONSE=$(curl -X POST \
+                        -H "Authorization: Bearer $AZURE_ACCESS_TOKEN" \
+                        --data-binary @$GITHUB_WORKSPACE/report_json.json \
+                        https://devsecops-ver.azurewebsites.net/api/week3-zap-report)
+          echo "Zap upload: $ZAP_RESPONSE"
