--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -126,6 +126,7 @@ jobs:
           fail_action: false
           allow_issue_writing: false
 
+
       - name: Upload ZAP report
         id: artifact-zap
         uses: actions/upload-artifact@v4
@@ -134,7 +135,7 @@ jobs:
           path: report_json.json
 
   build:
-    needs: [test, sonarqube]
+    needs: [test, sonarqube, dast]
     permissions:
       id-token: write
     runs-on: ubuntu-latest
