feat(ci): docker image scan

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -35,6 +35,25 @@ jobs:
           name: test-results
           path: junit/test-results.xml
 
+  image-scan:
+    needs: [test]
+    if: true
+    runs-on: ubuntu-latest
+    steps:
+      - name: Scan image
+        uses: anchore/scan-action@v3
+        id: image-scan
+        with:
+          image: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
+          fail-build: false
+          output-format: json
+      - name: Upload Image report
+        id: upload-image-report
+        uses: actions/upload-artifact@v4
+        with:
+          name: image-report
+          path: ${{ steps.image-scan.outputs.json }}
+
   sonarqube:
     needs: test
     if: true
@@ -63,7 +82,7 @@ jobs:
           path: sonarqube-report.json
 
   dast:
-    needs: [test, sonarqube]
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -135,7 +154,7 @@ jobs:
           path: report_json.json
 
   build:
-    needs: [test, sonarqube, dast]
+    needs: [sonarqube, dast]
     permissions:
       id-token: write
     runs-on: ubuntu-latest
