fix(ci): jq doesn't need line escapes

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -176,8 +176,8 @@ jobs:
       - name: Read reports
         run: |
           IMAGE_RESULT_HIGH=$(cat results.json \
-                              | jq '.matches[] \
-                              | select(.vulnerability.severity=="High") \
+                              | jq '.matches[]
+                              | select(.vulnerability.severity=="High")
                               | .vulnerability.id' \
                               | wc -l)
           if [ $IMAGE_RESULT_HIGH -gt 0 ]; then
@@ -197,8 +197,10 @@ jobs:
           fi
           
           ZAP_RESULT_HIGH=$(cat report_json.json \
-                          | jq -r '.site[].alerts[] \
+                          | jq -r '.site[].alerts[] 
                           | select(.riskdesc | startswith("High"))
+                          | .name' \
+                          | wc -l)
           if [ $ZAP_RESULT_HIGH -gt 0 ] then
             echo "Zap scan has high severity vulnerabilities"
             exit 1
