--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -228,11 +228,13 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
+          sbom: true
+          provenance: true
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
 
   submit_results:
-    needs: [build]
+    needs: [security_gate]
     if: true
     runs-on: ubuntu-latest
     steps:
